route/route_v2.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: etaw-knative
  namespace: default
spec:
  traffic:
    - revisionName: etaw-knative-00001
      percent: 100
    - revisionName: etaw-knative-00002
      percent: 0
      name: v2
