route/route_v4.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: etaw-knative
  namespace: default
spec:
  traffic:
    - revisionName: etaw-knative-00001
      percent: 0
    - revisionName: etaw-knative-00002
      percent: 100
